Implementing new UI changes on splash, onboarding and login

--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -7,7 +7,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/windowBackground"
+        android:background="@drawable/ic_new_bg_gradient"
         android:orientation="vertical">
 
         <ScrollView
@@ -19,16 +19,17 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:gravity="center_horizontal"
                 android:orientation="vertical">
 
                 <RelativeLayout
                     android:id="@+id/layout_logo"
                     android:layout_width="match_parent"
-                    android:layout_height="275dp"
-                    android:background="@drawable/ic_bg"
-                    android:fitsSystemWindows="true">
+                    android:layout_height="match_parent"
+                    android:background="@drawable/ic_new_bg_pattern"
+                    android:fitsSystemWindows="true"
+                    android:alpha=".05">
 
                 </RelativeLayout>
 
@@ -37,8 +38,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
-                    android:layout_margin="20dp"
-                    android:background="@drawable/round_white_badge">
+                    android:layout_margin="20dp">
 
                 <ImageView
                     android:id="@+id/logo"
@@ -54,7 +54,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/logo_bg"
-                    android:layout_margin="15dp"
+                    android:layout_margin="28dp"
+                    android:paddingTop="20dp"
+                    android:paddingBottom="20dp"
                     android:background="@drawable/background_custom_dialog"
                     android:gravity="center_horizontal"
                     android:orientation="vertical">
@@ -63,41 +65,29 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="25dp"
-                        android:text="@string/welcome_please_login_to_your_account"
+                        android:text="Welcome Back!"
                         android:textColor="@color/colorPrimary"
-                        android:textSize="15sp"
+                        android:textSize="30sp"
                         android:textStyle="bold" />
-
-                    <View
-                        android:layout_width="39dp"
-                        android:layout_height="5dp"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_margin="24dp"
-                        android:background="@drawable/rounded_corners_button" />
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="2dp"
-                        android:layout_marginStart="4dp"
-                        android:layout_marginLeft="4dp"
-                        android:layout_marginTop="4dp"
-                        android:layout_marginEnd="4dp"
-                        android:background="@color/light_gray" />
-
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="25dp"
-                        android:text="@string/welcome_please_login_to_your_account"
-                        android:textColor="#AEAEAE"
-                        android:textSize="14sp" />
+                        android:layout_marginTop="8dp"
+                        android:layout_marginBottom="40dp"
+                        android:text="Please login to your account."
+                        android:textColor="@color/colorPrimary"
+                        android:textSize="16sp"
+                        android:alpha=".9"/>
+
+
+
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="20dp"
                         android:gravity="center_horizontal"
-                        android:orientation="vertical">
+                        android:orientation="vertical"
+                        android:layout_margin="20dp">
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -109,38 +99,43 @@
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_marginBottom="4dp"
                                 android:text="@string/phone_number"
-                                android:textSize="16sp" />
+                                android:textSize="16sp"
+                                android:textColor="@color/colorPrimary"
+                                android:alpha=".5"/>
+
                             <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="45dp"
-                                android:layout_marginTop="10dp"
+                                android:layout_marginTop="5dp"
                                 android:background="@drawable/edittext_corner"
-                                android:orientation="horizontal">
+                                android:orientation="horizontal"
+                                android:paddingStart="40dp">
 
                                 <TextView
                                     android:id="@+id/text_country_code"
                                     android:layout_width="0dp"
                                     android:layout_height="match_parent"
                                     android:layout_weight="0.3"
-                                    android:background="@drawable/edittext_left_corners_green"
                                     android:gravity="center"
                                     android:text="+256"
-                                    android:textColor="@color/white"
+                                    android:textColor="#303030"
                                     android:textSize="14sp"
-                                    android:textStyle="bold" />
+                                    android:textStyle="bold"
+                                    app:drawableEndCompat="@drawable/ic_chevron_down"
+                                    app:drawableStartCompat="@drawable/ic_ug_flag" />
 
                                 <EditText
                                     android:id="@+id/user_phone"
                                     android:layout_width="0dp"
-                                    android:layout_height="match_parent"
+                                    android:layout_height="45dp"
                                     android:layout_weight="0.7"
                                     android:background="@android:color/transparent"
                                     android:inputType="phone"
                                     android:maxLength="9"
                                     android:padding="12dp"
-                                    android:textSize="14sp" />
+                                    android:textSize="14sp"
+                                    android:hint="Enter your mobile number"/>
 
                             </LinearLayout>
 
@@ -176,22 +171,24 @@
                         </LinearLayout>
 
                         <FrameLayout
-                            android:layout_width="match_parent"
+                            android:layout_width="192dp"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="20dip"
-                            android:background="@drawable/rounded_corners_button">
+                            android:padding="2dp"
+                            android:background="@android:drawable/dialog_holo_light_frame">
 
                             <androidx.appcompat.widget.AppCompatButton
                                 android:id="@+id/loginBtn"
                                 android:layout_width="match_parent"
-                                android:layout_height="40dip"
+                                android:layout_height="45dip"
                                 android:layout_gravity="center_vertical"
                                 android:layout_weight="1"
-                                android:background="@color/transparent"
+                                android:background="@drawable/rounded_corners_button"
                                 android:text="@string/next"
-                                android:textAllCaps="true"
+                                android:textAllCaps="false"
                                 android:textColor="@color/white"
-                                android:textSize="@dimen/button_text_size" />
+                                android:textSize="@dimen/button_text_size"
+                                android:textStyle="bold" />
 
                             <ImageView
                                 android:layout_width="30dip"
@@ -200,7 +197,8 @@
                                 android:layout_centerVertical="true"
                                 android:layout_gravity="right|center_vertical"
                                 android:layout_margin="10dip"
-                                android:src="@drawable/ic_right_chevron">
+                                android:src="@drawable/ic_right_chevron"
+                                android:visibility="gone">
 
                             </ImageView>
 
@@ -219,7 +217,7 @@
                                 android:clickable="true"
                                 android:focusable="true"
                                 android:text="@string/forgot_pass"
-                                android:textColor="@color/colorAccentGrey"
+                                android:textColor="@color/colorPrimary"
                                 android:textSize="16sp" />
 
                         </FrameLayout>
@@ -283,7 +281,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/login_form_layout"
-                    android:layout_margin="10dp"
+                    android:layout_margin="20dp"
                     android:gravity="center"
                     android:orientation="vertical">
 
@@ -292,7 +290,7 @@
                         android:layout_height="wrap_content"
                         android:layout_margin="5dp"
                         android:text="@string/don_t_have_an_account_yet"
-                        android:textColor="#515C6F" />
+                        android:textColor="#110D48" />
 
                     <TextView
                         android:id="@+id/login_signupText"
@@ -302,7 +300,7 @@
                         android:clickable="true"
                         android:focusable="true"
                         android:text="@string/create_a_new_account"
-                        android:textColor="@color/colorPrimary"
+                        android:textColor="#C9EBFF"
                         android:textStyle="bold" />
 
                 </LinearLayout>
