--- a/app/src/main/res/drawable/whit_edittext_with_shadow.xml
+++ b/app/src/main/res/drawable/whit_edittext_with_shadow.xml
@@ -1,17 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item >
-        <shape
-            android:shape="rectangle">
-            <solid android:color="@android:color/darker_gray" />
-            <corners android:radius="5dp"/>
+
+    <!-- Drop Shadow Stack -->
+    <item>
+        <shape>
+            <padding android:top="1dp" android:right="1dp" android:bottom="2dp" android:left="1dp" />
+            <corners android:radius="5dp" />
+            <solid android:color="#00CCCCCC" />
         </shape>
     </item>
-    <item android:right="1dp" android:left="1dp" android:bottom="2dp">
-        <shape
-            android:shape="rectangle">
-            <solid android:color="@android:color/white"/>
-            <corners android:radius="5dp"/>
+    <item>
+        <shape>
+            <padding android:top="1dp" android:right="1dp" android:bottom="2dp" android:left="1dp" />
+            <corners android:radius="5dp" />
+            <solid android:color="#10CCCCCC" />
+        </shape>
+    </item>
+    <item>
+        <shape>
+            <padding android:top="1dp" android:right="1dp" android:bottom="2dp" android:left="1dp" />
+            <corners android:radius="5dp" />
+            <solid android:color="#20CCCCCC" />
+        </shape>
+    </item>
+    <item>
+        <shape>
+            <padding android:top="1dp" android:right="1dp" android:bottom="2dp" android:left="1dp" />
+            <corners android:radius="5dp" />
+            <solid android:color="#30CCCCCC" />
+        </shape>
+    </item>
+    <item>
+        <shape>
+            <padding android:top="1dp" android:right="1dp" android:bottom="2dp" android:left="1dp" />
+            <corners android:radius="5dp" />
+            <solid android:color="#50CCCCCC" />
+        </shape>
+    </item>
+
+    <!-- Background -->
+    <item>
+        <shape>
+            <solid android:color="#ffffff" />
+            <corners android:radius="5dp" />
         </shape>
     </item>
 </layer-list>
