--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -106,11 +106,10 @@
 
                             <LinearLayout
                                 android:layout_width="match_parent"
-                                android:layout_height="45dp"
-                                android:layout_marginTop="5dp"
-                                android:background="@drawable/edittext_corner"
-                                android:orientation="horizontal"
-                                android:paddingStart="40dp">
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="8dp"
+                                android:background="@drawable/rounded_gray_background"
+                                android:orientation="horizontal">
 
                                 <TextView
                                     android:id="@+id/text_country_code"
@@ -121,9 +120,16 @@
                                     android:text="+256"
                                     android:textColor="#303030"
                                     android:textSize="14sp"
-                                    android:textStyle="bold"
+                                    android:layout_marginStart="10dp"
+                                    android:layout_marginEnd="10dp"
                                     app:drawableEndCompat="@drawable/ic_chevron_down"
                                     app:drawableStartCompat="@drawable/ic_ug_flag" />
+
+                                <View
+                                    android:layout_width="1dp"
+                                    android:layout_height="match_parent"
+                                    android:background="#FFF"
+                                    android:alpha=".7"/>
 
                                 <EditText
                                     android:id="@+id/user_phone"
@@ -281,7 +287,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/login_form_layout"
-                    android:layout_margin="20dp"
+                    android:layout_margin="10dp"
                     android:gravity="center"
                     android:orientation="vertical">
 
