--- a/app/src/main/res/layout/layout_getting_started.xml
+++ b/app/src/main/res/layout/layout_getting_started.xml
@@ -21,7 +21,7 @@
             android:alpha=".05"/>
         <ImageView
             android:id="@+id/logo"
-            android:src="@drawable/new_logo"
+            android:src="@drawable/logo_vector"
             android:layout_width="138.88pt"
             android:paddingBottom="@dimen/dimen_20dp"
             android:layout_height="140dp"
@@ -40,7 +40,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="W E L C O M E   T O"
-                android:textColor="#110D47"
+                android:textColor="@color/colorPrimaryDark"
                 android:textSize="18sp"
                 app:layout_constraintBottom_toTopOf="@id/logo_title"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -51,7 +51,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="eMaisha Pay"
-                android:textColor="#110D47"
+                android:textColor="@color/colorPrimaryDark"
                 android:textSize="30sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -79,7 +79,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="An Easy app to manage all your payment, Shopping and finance related needs"
-            android:textColor="#fff"
+            android:textColor="@color/colorPrimary"
             android:textSize="14sp"
             android:layout_below="@id/title2"
             android:layout_marginStart="25dp"
@@ -107,7 +107,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Already have account? "
-                android:textColor="#110D48"
+                android:textColor="@color/colorPrimaryDark"
                 android:textSize="14sp"
                 android:textStyle="bold"
                 android:layout_centerHorizontal="true"/>
