--- a/app/src/main/res/layout/slides_layout.xml
+++ b/app/src/main/res/layout/slides_layout.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
@@ -22,11 +22,10 @@
     <ImageView
         android:id="@+id/slider_image"
         android:layout_width="0dp"
-        android:layout_height="240dp"
+        android:layout_height="220dp"
         android:layout_marginTop="40dp"
         android:padding="20dp"
-        android:src="@drawable/ic_bag"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:src="@drawable/ic_onboarding_pay_img"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/slider_desc" />
@@ -34,16 +33,32 @@
 
 
     <TextView
-        android:id="@+id/slider_desc"
+        android:id="@+id/slider_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="40dp"
+        android:layout_marginTop="40dp"
         android:gravity="center"
         android:padding="10dp"
-        android:text="Buy and Sell agricultural inputs"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@id/slider_image"
+        android:text="@string/pay"
+        android:textSize="34sp"
+        android:textColor="@color/colorPrimaryDark"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@id/slider_desc"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
+    <TextView
+        android:id="@+id/slider_desc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="40dp"
+        android:gravity="center"
+        android:padding="10dp"
+        android:text="@string/pay_description"
+        android:textSize="16sp"
+        android:textColor="@color/colorPrimaryDark"
+        app:layout_constraintBottom_toTopOf="@id/slider_image"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/slider_title"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
