--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#2E84BE</color>
+    <color name="colorPrimary">#2D84B7</color>
     <color name="colorPrimaryLight">#000</color>
     <color name="textColor">#515C6F</color>
-    <color name="buttonColor">#2E84BE</color>
-    <color name="colorPrimaryDark">#2E84BE</color>
-    <color name="colorAccent">#2E84BE</color>
+    <color name="buttonColor">#2D84B7</color>
+    <color name="colorPrimaryDark">#123365</color>
+    <color name="colorAccent">#2D84B7</color>
     <color name="White">#ffffff</color>
     <color name="opaqueWhite">#8CFFFFFF</color>
     <color name="blackText">#444444</color>
